tests/rustdoc-ui/doctest-output.rs
//@ compile-flags:-Z unstable-options --show-coverage --output-format=doctest

//~? ERROR `--output-format=doctest` is not supported for the `--show-coverage` option
